# woll-pilot

./: .gitignore  Dockerfile  Dockerfile.api  README.md  api.py  compose.yml  main.py  pyproject.toml  tasks.py  test_api.py
wool-pilot/: main.py
wool_pilot/: constants.py  database.py  logger.py  models.py  scrapers.py  test_scrapers.py
