[project]
name = "wool-pilot"
version = "0.1.0"
description = "Find the best wool prices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi[standard]>=0.115.12",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "python-json-logger>=3.3.0",
    "redis>=6.2.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = ["debugpy>=1.8.14", "ipython>=9.3.0"]
